--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div id="sidebar">
-    <img id="logo" src="\assets\images\logo.png">
+    <img id="logo" src="\group-project-web-mob-2\assets\images\logo.png">
     <h2>Table of Contents</h2>
     <a href="#" class="active">Introduction</a>
     <a href="#">History</a>
