--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <title>Unix Survival Guide - Home</title>
-    <link rel="stylesheet" href="\assets\css\styles.css">
+    <link rel="stylesheet" href="assets\css\styles.css">
 </head>
 <body>
 
 <div id="sidebar">
-    <img id="logo" src="\group-project-web-mob-2\assets\images\logo.png">
+    <img id="logo" src="assets\images\logo.png">
     <h2>Table of Contents</h2>
     <a href="#" class="active">Introduction</a>
     <a href="#">History</a>
