--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <div id="sidebar">
     <img id="logo" src="assets\images\logo.png">
     <h2>Table of Contents</h2>
-    <a href="#" class="active">Introduction</a>
+    <a href="index.html" class="active">Introduction</a>
     <a href="#">History</a>
     <a href="#">Terminal</a>
     <a href="#">Commands</a>
     <a href="#">Practice Lessons</a>
-    <a href="#">Quizzes</a>
+    <a href="quizzes.html" class="active">Quizzes</a>
 </div>
 
 <div id="content">
