--- a/working.html
+++ b/working.html
@@ -15,7 +15,7 @@
     <a href="#">History</a>
     <a href="#">Terminal</a>
     <a href="#">Commands</a>
-    <a href="#">Practice Lessons</a>
+    <a href="practiceLessons.html">Practice Lessons</a>
     <a href="quizzes.html" class="active">Quizzes</a>
 </div>
 
