Cleaned up <a> link references to be more consistent/comply with w3c validation

--- a/working.html
+++ b/working.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unix Survival Guide - Quizzes</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
 
 <div id="sidebar">
-    <img id="logo" src="assets/images/logo.png">
+    <img id="logo" src="./assets/images/logo.png">
     <h2>Table of Contents</h2>
-    <a href="index.html" class="active">Introduction</a>
+    <a href="./index.html" class="active">Introduction</a>
     <a href="#">History</a>
     <a href="#">Terminal</a>
     <a href="#">Commands</a>
-    <a href="practiceLessons.html">Practice Lessons</a>
-    <a href="quizzes.html" class="active">Quizzes</a>
+    <a href="./practiceLessons.html">Practice Lessons</a>
+    <a href="./quizzes.html" class="active">Quizzes</a>
 </div>
 
 <div id="content">
@@ -43,7 +43,7 @@
     </section>
 </div>
 
-<script src="assets/js/script.js"></script>
+<script src="./assets/js/script.js"></script>
 
 </body>
 </html>
