--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <title>Unix Survival Guide - Home</title>
-    <link rel="stylesheet" href="assets\css\styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
 
 <div id="sidebar">
-    <img id="logo" src="assets\images\logo.png">
+    <img id="logo" src="./assets/images/logo.png">
     <h2>Table of Contents</h2>
-    <a href="index.html" class="active">Introduction</a>
+    <a href="./index.html" class="active">Introduction</a>
     <a href="#">History</a>
     <a href="#">Terminal</a>
     <a href="#">Commands</a>
-    <a href="practiceLessons.html">Practice Lessons</a>
-    <a href="quizzes.html" class="active">Quizzes</a>
+    <a href="./practiceLessons.html">Practice Lessons</a>
+    <a href="./quizzes.html" class="active">Quizzes</a>
 </div>
 
 <div id="content">
