--- a/working.html
+++ b/working.html
@@ -9,7 +9,7 @@
 <body>
 
 <div id="sidebar">
-    <img id="logo" src="./assets/images/logo.png">
+    <img id="logo" src="./assets/images/logo.png" alt="Group logo">
     <h2>Table of Contents</h2>
     <a href="./index.html" class="active">Introduction</a>
     <a href="#">History</a>
