Completed adding the primary content to practiceLessons.

--- a/practiceLessons.html
+++ b/practiceLessons.html
@@ -86,18 +86,69 @@
             </li>
             <li>
                 <strong><strong class="code">cp</strong> (Copy)</strong><br>
-                To copy files from one location to another, type "cp" followed by the filename and destination. 
+                To copy files from one location to another, type <strong class="code">cp</strong> followed by the filename and destination. 
                 For example, <strong class="code">cp example.txt backup/</strong> copies <strong class="code">example.txt</strong> to the directory <strong class="code">backup/</strong>.
             </li>
         </ul>
     </section>
     <section class="lesson">
         <h2>Lesson 3: Text Processing and Redirection</h2>
+        <h3>Text File Manipulation</h3>
+        <ul>
+            <li>
+                <strong class="code">cat</strong><br>
+                <strong class="code">cat</strong> is a command that shows the contents of a file on your screen. You can use it to display the contents of one or multiple files in a row. 
+            </li>
+            <li>
+                <strong class="code">grep</strong><br>
+                <strong class="code">grep</strong> helps you search for specific words or patterns in a file. 
+                For example, if you're looking for all the line content of the word <strong class="code">hotdog</strong> in a file, grep will find and show them to you. 
+            </li>
+        </ul>
+        <h3>Redirection</h3>
+        <ul>
+            <li>
+                <strong class="code">></strong><br>
+                When the <strong class="code">></strong> command is used, it sends the output of that command to a file, and it replaces the content of the file if it already exists.
+            </li>
+            <li>
+                <strong class="code">>></strong><br>
+                The <strong class="code">>></strong> command works similarly to <strong class="code">></strong> but instead of replacing the content of a file it adds the output of a command to the end of a file.
+            </li>
+        </ul>
     </section>
     <section class="lesson">
         <h2>Lesson 4: Process Management and System Monitoring Content</h2>
+        <h3>Viewing Processes</h3>
+        <ul>
+            <li>
+                <strong class="code">ps</strong><br>
+                <strong class="code">ps</strong> shows you the programs that are running and their IDs.
+            </li> 
+            <li>
+                <strong class="code">top</strong><br>
+                <strong class="code">top</strong> constantly updates to show you which programs are using the most resources like CPU and memory.
+            </li>
+        </ul>
+        <h3>Managing Processes</h3>
+        <ul>
+            <li>
+                <strong class="code">kill</strong><br>
+                <strong class="code">kill</strong> will tell the computer to end a program.
+            </li>
+        </ul>
+        <h3>System Monitoring</h3>
+        <ul>
+            <li>
+                <strong class="code">uptime</strong><br>
+                This command tells you how long your computer has been running since it started up.
+            </li>
+            <li>
+                <strong class="code">free</strong><br>
+                This command checks your computer's memory. It shows you how much memory is being used and how much is still available.
+            </li>
+        </ul>
     </section>
-    
 </div>
 
 </body>
