added css and responsiveness to all webpages coded in so far

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <title>Unix Survival Guide - Home</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <script src="assets/js/script.js"></script>
 </head>
 <body>
 
