--- a/practiceLessons.html
+++ b/practiceLessons.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <title>Unix Survival Guide - Home</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="assets/js/script.js"></script>
+
 </head>
 <body>
 
@@ -43,6 +45,7 @@
         <h3>Command-line interface (CLI)</h3>
         <p>UNIX predominantly operates through a command-line interface (CLI), allowing users to interact with the system by typing commands.</p>
     </section>
+    <hr>
     <section class="lesson">
         <h2>Lesson 2: File System Navigation and Manipulation</h2>
         <p>
@@ -67,6 +70,7 @@
                 Example: <strong class="code">ls</strong> lists the files and directories in the current location.
             </li>
         </ul>
+        
         <h3>File Manipulation</h3>
         <ul>
             <li>
@@ -91,6 +95,7 @@
             </li>
         </ul>
     </section>
+    <hr>
     <section class="lesson">
         <h2>Lesson 3: Text Processing and Redirection</h2>
         <h3>Text File Manipulation</h3>
@@ -117,6 +122,7 @@
             </li>
         </ul>
     </section>
+    <hr>
     <section class="lesson">
         <h2>Lesson 4: Process Management and System Monitoring Content</h2>
         <h3>Viewing Processes</h3>
