progress in terminal

--- a/terminal.html
+++ b/terminal.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <title>Unix Survival Guide - Terminal</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <script src="assets/js/script.js"></script>
+
 </head>
 <body>
 
@@ -22,10 +24,11 @@
 
 <div id="content">
     <h1>Terminal</h1>
-    <h2 id="termHeading">Terminal</h2>
-    <p>The terminal acts as the command-line interface for UNIX-based systems, allowing users to interact with the operating system through text-based commands. Originally physical devices, terminals have developed into software-based emulators that mimic traditional terminal functionalities within graphical user interfaces. Despite the emergence of graphical interfaces, the terminal remains popular due to its speed, flexibility, and scripting capabilities, offering direct control and manipulation of the UNIX system.</p>
-    <p>Users operate the terminal to navigate the file system, manage processes, edit text files, configure system settings, and execute a variety of tasks efficiently. Through the terminal, users can access powerful UNIX utilities and tools, harnessing the system's full capabilities with precision and agility. Its text-based interface provides a streamlined environment for developers, system administrators, and enthusiasts to work effectively within the UNIX ecosystem.</p>
-    <img src="./terminal.png" alt="An example of a UNIX terminal.">
+    <h2 id="homePageHeading"></h2>
+    <p>The terminal acts as the command-line interface for UNIX-based systems, allowing users to interact with the operating system through text-based commands. Originally physical devices, terminals have developed into software-based emulators that mimic traditional terminal functionalities within graphical user interfaces. Despite the emergence of graphical interfaces, the terminal remains popular due to its speed, flexibility, and scripting capabilities, offering direct control and manipulation of the UNIX system.
+    <br><br>Users operate the terminal to navigate the file system, manage processes, edit text files, configure system settings, and execute a variety of tasks efficiently. Through the terminal, users can access powerful UNIX utilities and tools, harnessing the system's full capabilities with precision and agility. Its text-based interface provides a streamlined environment for developers, system administrators, and enthusiasts to work effectively within the UNIX ecosystem.</p>
+    <h3>Terminal:</h3>
+    <img src="assets/images/terminal.png" alt="An example of a UNIX terminal." id="terminal_image">
 </div>
 
 </body>
