fix up css on terminal

--- a/practiceLessons.html
+++ b/practiceLessons.html
@@ -16,7 +16,7 @@
     <h2>Table of Contents</h2>
     <a href="./index.html" class="active">Introduction</a>
     <a href="#">History</a>
-    <a href="#">Terminal</a>
+    <a href="./terminal.html">Terminal</a>
     <a href="#">Commands</a>
     <a href="./practiceLessons.html">Practice Lessons</a>
     <a href="./quizzes.html" class="active">Quizzes</a>
