--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img id="logo" src="./assets/images/logo.png" alt="Group logo">
     <h2>Table of Contents</h2>
     <a href="./index.html" class="active">Introduction</a>
-    <a href="#">History</a>
+    <a href="./history.html">History</a>
     <a href="./terminal.html">Terminal</a>
     <a href="#">Commands</a>
     <a href="./practiceLessons.html">Practice Lessons</a>
