--- a/quizzes.html
+++ b/quizzes.html
@@ -10,14 +10,14 @@
 <body>
 
 <div id="sidebar">
-    <img id="logo" src="assets/images/logo.png">
+    <img id="logo" src="./assets/images/logo.png" alt="Group logo">
     <h2>Table of Contents</h2>
-    <a href="index.html" class="active">Introduction</a>
-    <a href="#">History</a>
-    <a href="#">Terminal</a>
+    <a href="./index.html" class="active">Introduction</a>
+    <a href="./history.html">History</a>
+    <a href="./terminal.html">Terminal</a>
     <a href="#">Commands</a>
-    <a href="#">Practice Lessons</a>
-    <a href="quizzes.html" class="active">Quizzes</a>
+    <a href="./practiceLessons.html">Practice Lessons</a>
+    <a href="./quizzes.html" class="active">Quizzes</a>
 </div>
 
 <div id="content">
