changed up table of contents to have all pages connected

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="./index.html" class="active">Introduction</a>
     <a href="./history.html">History</a>
     <a href="./terminal.html">Terminal</a>
-    <a href="#">Commands</a>
+    <a href="./commands.html">Commands</a>
     <a href="./practiceLessons.html">Practice Lessons</a>
     <a href="./quizzes.html" class="active">Quizzes</a>
 </div>
