--- a/commands.html
+++ b/commands.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 
-    <div id="sidebar">
-        <img id="logo" src="assets/images/logo.png" alt="Logo">
-        <h2>Table of Contents</h2>
-        <a href="index.html">Introduction</a>
-        <a href="history.html">History</a>
-        <a href="terminal.html">Terminal</a>
-        <a href="commands.html">Commands</a>
-        <a href="practiceLessons.html">Practice Lessons</a>
-        <a href="quizzes.html">Quizzes</a>
-    </div>
+<div id="sidebar">
+    <img id="logo" src="./assets/images/logo.png" alt="Group logo">
+    <h2>Table of Contents</h2>
+    <a href="./index.html" class="active">Introduction</a>
+    <a href="./history.html">History</a>
+    <a href="./terminal.html">Terminal</a>
+    <a href="./commands.html">Commands</a>
+    <a href="./practiceLessons.html">Practice Lessons</a>
+    <a href="./quizzes.html" class="active">Quizzes</a>
+</div>
 
 <div id="content">
     <h1>Commands</h1>
