--- a/quizzes.html
+++ b/quizzes.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unix Survival Guide - Quizzes</title>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <title>Unix Survival Guide - Home</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/script.js"></script>
+
 </head>
 <body>
 
