--- a/quizzes.html
+++ b/quizzes.html
@@ -25,8 +25,8 @@
 <div id="content">
 
     <h1>Quiz</h1>
+    <h2 id="homePageHeading"></h2>
     <div id="quizContainer">
-
     </div>
 
     <button id="submit">Submit Answers</button>
