--- a/commands.html
+++ b/commands.html
@@ -22,6 +22,8 @@
 
 <div id="content">
     <h1>Commands</h1>
+    <h2 id="homePageHeading"></h2>
+
         <p>ls: Lists the contents of a directory.</p>
         <img src="assets/images/ls_example.png" alt="ls example">
         <p>cd: Changes the current directory.</p>
