fixing up small things

--- a/commands.html
+++ b/commands.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="assets/js/script.js"></script>
     <title>Unix Survival Guide - Commands</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
 
 <div id="content">
     <h1>Commands</h1>
-    <h2 id="homePageHeading"></h2>
+    <h2 id="homePageHeading">&nbsp;</h2>
 
         <p>ls: Lists the contents of a directory.</p>
         <img src="assets/images/ls_example.png" alt="ls example">
