--- a/history.html
+++ b/history.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="assets/js/script.js"></script>
     <title>Unix Survival Guide - History</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
 
 <div id="content">
     <h1>History</h1>
-    <h2 id="homePageHeading"></h2>
+    <h2 id="homePageHeading">&nbsp;</h2>
     <p>Unix was created in the mid-1960s by researchers at Bell Labs who needed more clarification on the complexity of Multics. The operating system was initially without organizational backing and was called Unics. It was written in assembly language but later rewritten in C.Unix's influence led to commercial startups' large-scale adoption of Unix (BSD and System V). Unix became the operating system of choice for over 90% of the world's top 500 fastest supercomputers and is widely used in modern servers, workstations, and mobile devices.<br><br>
         <img src="assets/images/terminal.png" alt="random_picture">
         <br>Unix's influence led to the widespread adoption of Unix variants such as BSD and System V by commercial startups. By the late 20th century, Unix had become the operating system of choice for over 90% of the world's top 500 fastest supercomputers and was widely used in modern servers, workstations, and mobile devices. Throughout the 1980s and 1990s, Unix underwent further refinement and expansion, with competing vendors contributing enhancements. The rise of open-source Unix-like operating systems, particularly Linux, in the early 21st century democratized access to Unix technology, fostering innovation and collaboration. Today, Unix and Unix-like operating systems continue to play a crucial role in computing across various domains.
