--- a/terminal.html
+++ b/terminal.html
@@ -24,12 +24,12 @@
 
 <div id="content">
     <h1>Terminal</h1>
-    <h2 id="homePageHeading"></h2>
+    <h2 id="homePageHeading">&nbsp;</h2>
     <p>The terminal acts as the command-line interface for UNIX-based systems, allowing users to interact with the operating system through text-based commands. Originally physical devices, terminals have developed into software-based emulators that mimic traditional terminal functionalities within graphical user interfaces. Despite the emergence of graphical interfaces, the terminal remains popular due to its speed, flexibility, and scripting capabilities, offering direct control and manipulation of the UNIX system.
     <br><br>Users operate the terminal to navigate the file system, manage processes, edit text files, configure system settings, and execute a variety of tasks efficiently. Through the terminal, users can access powerful UNIX utilities and tools, harnessing the system's full capabilities with precision and agility. Its text-based interface provides a streamlined environment for developers, system administrators, and enthusiasts to work effectively within the UNIX ecosystem.
-    <br><br>Here is an example of a terminal:<!-- <h3>Terminal:</h3> -->
+    <br><br>Here is an example of a terminal:
     <img src="assets/images/terminal.png" alt="An example of a UNIX terminal." >
-    Furthermore, the terminal helps users automate tasks with shell scripting, making repetitive jobs easier. It's handy for managing systems and writing software efficiently. Plus, it gives users control over their workflow, making them more productive. Overall, the terminal is a crucial tool in Unix systems, making tasks simpler and faster for users in different fields.    </p>
+    <br><br>Furthermore, the terminal helps users automate tasks with shell scripting, making repetitive jobs easier. It's handy for managing systems and writing software efficiently. Plus, it gives users control over their workflow, making them more productive. Overall, the terminal is a crucial tool in Unix systems, making tasks simpler and faster for users in different fields.    </p>
 </div>
 
 </body>
