--- a/practiceLessons.html
+++ b/practiceLessons.html
@@ -24,7 +24,7 @@
 
 <div id="content">
     <h1>Practice Lesson</h1>
-    <h2 id="homePageHeading"></h2>
+    <h2 id="homePageHeading">&nbsp;</h2>
     <section class="lesson">
         <h2>Lesson 1: Introduction to UNIX</h2>
         <h3>Unix Basics</h3>
