--- a/quizzes.html
+++ b/quizzes.html
@@ -25,7 +25,7 @@
 <div id="content">
 
     <h1>Quiz</h1>
-    <h2 id="homePageHeading"></h2>
+    <h2 id="homePageHeading">&nbsp;</h2>
     <div id="quizContainer">
     </div>
 
