--- a/history.html
+++ b/history.html
@@ -12,7 +12,7 @@
 
 <div id="sidebar">
     <img id="logo" src="./assets/images/logo.png" alt="Group logo">
-    <h2>Table of Contents</h2>
+    <h2 class="tableOfContentHeading">Table of Contents</h2>
     <a href="./index.html" class="active">Introduction</a>
     <a href="./history.html">History</a>
     <a href="./terminal.html">Terminal</a>
