--- a/history.html
+++ b/history.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <script src="assets/js/script.js"></script>
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <script src="./assets/js/script.js"></script>
     <title>Unix Survival Guide - History</title>
 </head>
 <body>
