--- a/terminal.html
+++ b/terminal.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <title>Unix Survival Guide - Terminal</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 
 </head>
 <body>
