--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <div id="sidebar">
     <img id="logo" src="./assets/images/logo.png" alt="Group logo">
     <h2>Table of Contents</h2>
-    <a href="./index.html" class="active">Introduction</a>
-    <a href="./history.html">History</a>
-    <a href="./terminal.html">Terminal</a>
-    <a href="./commands.html">Commands</a>
-    <a href="./practiceLessons.html">Practice Lessons</a>
-    <a href="./quizzes.html" class="active">Quizzes</a>
+    <a href="./index.html" class="active"><strong>Introduction</strong></a>
+    <a href="./history.html"><strong>History</strong></a>
+    <a href="./terminal.html"><strong>Terminal</strong></a>
+    <a href="./commands.html"><strong>Commands</strong></a>
+    <a href="./practiceLessons.html"><strong>Practice Lessons</strong></a>
+    <a href="./quizzes.html" class="active"><strong>Quizzes</strong></a>
 </div>
 
 <div id="content">
