--- a/quizzes.html
+++ b/quizzes.html
@@ -24,8 +24,7 @@
 
 <div id="content">
 
-    <h1>Quiz</h1>
-    <h2 id="homePageHeading">&nbsp;</h2>
+    <h1>Quiz<br><br></h1>
     <div id="quizContainer">
     </div>
 
