--- a/quizzes.html
+++ b/quizzes.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-
+<!--Setting up the sidebar-->
 <div id="sidebar">
     <img id="logo" src="./assets/images/logo.png" alt="Group logo">
     <h2>Table of Contents</h2>
@@ -23,7 +23,7 @@
 </div>
 
 <div id="content">
-
+<!--We're setting up the submit here, and the quiz itself-->
     <h1>Quiz<br><br></h1>
     <div id="quizContainer">
     </div>
