--- a/commands.html
+++ b/commands.html
@@ -25,10 +25,13 @@
     <h1>Commands</h1>
     <h2 id="homePageHeading">&nbsp;</h2>
 
-        <p>ls: Lists the contents of a directory.</p>
-        <img src="assets/images/ls_example.png" alt="ls example">
-        <p>cd: Changes the current directory.</p>
-        <img src="assets/images/cd_example.png" alt="cd example">
+        <p>ls: Lists the contents of a directory.<br>
+        <br>user@home ~/student>$ ls
+        <br>user@home ~/>$ </p>
+        <p>cd: Changes the current directory.<br><br>
+        <img src="assets/images/ls-linux-command (1).webp" alt="cd example">
+        </p>
+        
         <p>pwd: Prints the current working directory.</p>
         <img src="assets/images/pwd_example.png" alt="pwd example">
         <p>mkdir: Creates a new directory.</p>
