--- a/history.html
+++ b/history.html
@@ -9,7 +9,7 @@
     <title>Unix Survival Guide - History</title>
 </head>
 <body>
-
+<!--Setting up the sidebar-->
 <div id="sidebar">
     <img id="logo" src="./assets/images/logo.png" alt="Group logo">
     <h2>Table of Contents</h2>
@@ -20,7 +20,7 @@
     <a href="./practiceLessons.html"><strong>Practice Lessons</strong></a>
     <a href="./quizzes.html" class="active"><strong>Quizzes</strong></a>
 </div>
-
+<!--Here we talk about the history of Unix, and how it's used.-->
 <div id="content">
     <h1>History</h1>
     <h2 id="homePageHeading">&nbsp;</h2>
