--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./assets/js/script.js"></script>
 </head>
 <body>
-
+<!--Setting up the sidebar-->
 <div id="sidebar">
     <img id="logo" src="./assets/images/logo.png" alt="Group logo">
     <h2>Table of Contents</h2>
@@ -20,7 +20,7 @@
     <a href="./practiceLessons.html"><strong>Practice Lessons</strong></a>
     <a href="./quizzes.html" class="active"><strong>Quizzes</strong></a>
 </div>
-
+<!--Talking about the basics of Unix and what it offers-->
 <div id="content">
     <h1>Unix Survival Guide</h1>
     <h2 id="homePageHeading">Homepage</h2>
