--- a/terminal.html
+++ b/terminal.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-
+<!--Setting up the sidebar-->
 <div id="sidebar">
     <img id="logo" src="./assets/images/logo.png" alt="Group logo">
     <h2>Table of Contents</h2>
@@ -21,7 +21,7 @@
     <a href="./practiceLessons.html"><strong>Practice Lessons</strong></a>
     <a href="./quizzes.html" class="active"><strong>Quizzes</strong></a>
 </div>
-
+<!--Talking about the terminal and what it does-->
 <div id="content">
     <h1>Terminal</h1>
     <h2 id="homePageHeading">&nbsp;</h2>
